--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,10 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+//TODO 2 :tambahkan library unit testing disini ; Jangan lupa sync now
+
+    //Unit Testing
+
+
 }
