--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,13 @@ dependencies {
 //TODO 2 :tambahkan library unit testing disini ; Jangan lupa sync now
 
     //Unit Testing
-
-
+    testImplementation 'org.mockito:mockito-all:1.10.19'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    // Optional -- Hamcrest library
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+    // Optional -- UI testing with Espresso
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // Optional -- UI testing with UI Automator
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 }
